--- a/package.json
+++ b/package.json
@@ -1,53 +1,61 @@
 {
-  "name": "sample",
-  "workspaces": [
-    "packages/*"
-  ],
-  "scripts": {
-    "clean": "lerna run clean --stream --parallel",
-    "build": "lerna run build --stream --parallel",
-    "lint": "eslint . --ext .js,.ts,.tsx -f codeframe",
-    "pretest": "yarn typecheck && yarn lint",
-    "test": "yarn test:unit",
-    "test:unit": "mocha \"packages/**/test/**/*.spec.ts?(x)\"",
-    "start": "yarn workspace @sample/app start",
-    "typecheck": "tsc --noEmit",
-    "prettify": "npx prettier \"packages/**/*.{js,ts,tsx}\" --write"
-  },
-  "devDependencies": {
-    "@ts-tools/node": "^1.1.3",
-    "@ts-tools/webpack-loader": "^1.1.3",
-    "@types/chai": "^4.2.10",
-    "@types/compression": "^1.7.0",
-    "@types/express": "^4.17.2",
-    "@types/mocha": "^7.0.1",
-    "@types/node": "12",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
-    "@typescript-eslint/eslint-plugin": "^2.22.0",
-    "@typescript-eslint/parser": "^2.22.0",
-    "chai": "^4.2.0",
-    "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-no-only-tests": "^2.4.0",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "html-webpack-plugin": "^4.0.0-beta.11",
-    "lerna": "^3.20.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "mocha": "^7.1.0",
-    "nodemon": "^2.0.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "rimraf": "^3.0.2",
-    "tsconfig-paths": "^3.9.0",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "~3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
-  },
-  "license": "MIT",
-  "private": true
+    "name": "sample",
+    "workspaces": [
+        "packages/*"
+    ],
+    "scripts": {
+        "clean": "lerna run clean --stream --parallel",
+        "build": "lerna run build --stream --parallel",
+        "lint": "eslint . --ext .js,.ts,.tsx -f codeframe",
+        "pretest": "yarn typecheck && yarn lint",
+        "test": "yarn test:unit",
+        "test:unit": "mocha \"packages/**/test/**/*.spec.ts?(x)\"",
+        "start": "yarn workspace @sample/app start",
+        "typecheck": "tsc --noEmit",
+        "prettify": "npx prettier \"packages/**/*.{js,ts,tsx}\" --write"
+    },
+    "devDependencies": {
+        "@file-services/path": "^2.2.0",
+        "@file-services/types": "^2.2.0",
+        "@stylable/cli": "^3.3.0",
+        "@stylable/core": "^3.3.0",
+        "@stylable/dom-test-kit": "^3.3.1",
+        "@stylable/node": "^3.3.0",
+        "@stylable/runtime": "^3.2.0",
+        "@stylable/webpack-plugin": "^3.3.0",
+        "@ts-tools/node": "^1.1.3",
+        "@ts-tools/webpack-loader": "^1.1.3",
+        "@types/chai": "^4.2.10",
+        "@types/compression": "^1.7.0",
+        "@types/express": "^4.17.2",
+        "@types/mocha": "^7.0.1",
+        "@types/node": "12",
+        "@types/react": "^16.9.23",
+        "@types/react-dom": "^16.9.5",
+        "@typescript-eslint/eslint-plugin": "^2.22.0",
+        "@typescript-eslint/parser": "^2.22.0",
+        "chai": "^4.2.0",
+        "css-loader": "^3.4.2",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-no-only-tests": "^2.4.0",
+        "eslint-plugin-react": "^7.18.3",
+        "eslint-plugin-react-hooks": "^2.5.0",
+        "html-webpack-plugin": "^4.0.0-beta.11",
+        "lerna": "^3.20.2",
+        "mini-css-extract-plugin": "^0.9.0",
+        "mocha": "^7.1.0",
+        "nodemon": "^2.0.2",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0",
+        "rimraf": "^3.0.2",
+        "tsconfig-paths": "^3.9.0",
+        "tsconfig-paths-webpack-plugin": "^3.2.0",
+        "typescript": "~3.8.3",
+        "webpack": "^4.42.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3"
+    },
+    "license": "MIT",
+    "private": true
 }
