infra: rename usages of @sample to @windmill it should be consistent across repository. fixed import to /src that didn't work due to only @sample/* being remapped in tsconfig.

--- a/packages/app/tsconfig.build.json
+++ b/packages/app/tsconfig.build.json
@@ -4,7 +4,7 @@
         "module": "commonjs",
         "outDir": "cjs",
         "paths": {
-            "@sample/*": ["node_modules/@sample/*/src"]
+            "@windmill/*": ["node_modules/@windmill/*/src"]
         }
     },
     "include": ["src"]
