--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pretest": "yarn typecheck && yarn lint",
     "test": "yarn test:unit",
     "test:unit": "mocha \"packages/**/test/**/*.spec.ts?(x)\"",
-    "start": "yarn workspace @sample/app start",
+    "start": "yarn workspace @windmill/app start",
     "typecheck": "tsc --noEmit",
     "prettify": "npx prettier \"packages/**/*.{js,ts,tsx}\" --write"
   },
