--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -8,7 +8,7 @@
     "prebuild": "yarn clean",
     "build": "tsc -p tsconfig.build.json",
     "test": "mocha \"test/**/*.spec.ts?(x)\"",
-    "prestart": "yarn workspace @sample/app build:umd",
+    "prestart": "yarn workspace @windmill/app build:umd",
     "start": "node -r @ts-tools/node/r -r tsconfig-paths/register ./src/index.tsx",
     "prepack": "yarn build"
   },
