--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sample/server",
+  "name": "@windmill/server",
   "version": "1.0.0",
   "main": "cjs/index.js",
   "types": "cjs/index.d.ts",
@@ -8,7 +8,7 @@
     "prebuild": "yarn clean",
     "build": "tsc -p tsconfig.build.json",
     "test": "mocha \"test/**/*.spec.ts?(x)\"",
-    "prestart": "yarn workspace @sample/app build:umd",
+    "prestart": "yarn workspace @windmill/app build:umd",
     "start": "node -r @ts-tools/node/r -r tsconfig-paths/register ./src/index.tsx",
     "prepack": "yarn build"
   },
@@ -17,7 +17,7 @@
     "react-dom": ">=16"
   },
   "dependencies": {
-    "@sample/app": "^1.0.0",
+    "@windmill/app": "^1.0.0",
     "compression": "^1.7.4",
     "express": "^4.17.1"
   },
