--- a/packages/server/tsconfig.build.json
+++ b/packages/server/tsconfig.build.json
@@ -4,7 +4,7 @@
         "module": "commonjs",
         "outDir": "cjs",
         "paths": {
-            "@sample/*": ["node_modules/@sample/*/src"]
+            "@windmill/*": ["node_modules/@windmill/*/src"]
         }
     },
     "include": ["src"]
