--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "plugins": ["react-hooks", "no-only-tests"],
     "rules": {
         "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-unnecessary-type-assertion": "off",
         "@typescript-eslint/interface-name-prefix": "off",
         "@typescript-eslint/no-floating-promises": "error",
         "@typescript-eslint/no-use-before-define": "off",
