--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "lerna": "^3.20.2",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^7.1.1",
+    "mocha-pup": "^2.1.1",
+    "puppeteer": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
