--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
+    "@wixc3/wcs-core": "^1.5.0",
     "chai": "^4.2.0",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
