--- a/packages/a11y/package.json
+++ b/packages/a11y/package.json
@@ -10,7 +10,7 @@
     "build": "yarn build:cjs && yarn build:esm",
     "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir cjs",
     "build:esm": "tsc -p tsconfig.build.json --module esnext --outDir esm",
-    "test": "mocha \"test/**/*.spec.ts?(x)\"",
+    "test": "mocha-pup \"test/**/*.spec.ts?(x)\"",
     "prepack": "yarn build"
   },
   "peerDependencies": {
@@ -27,5 +27,8 @@
   "private": true,
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "axe-core": "^3.5.2"
   }
 }
