--- a/packages/a11y/tsconfig.build.json
+++ b/packages/a11y/tsconfig.build.json
@@ -1,9 +1,3 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "paths": {
-      "@windmill/*": ["node_modules/@windmill/*/src"]
-    }
-  },
-  "include": ["src"]
+  "extends": "../../tsconfig.json"
 }
