--- a/packages/mock-repo/package.json
+++ b/packages/mock-repo/package.json
@@ -16,6 +16,9 @@
   "peerDependencies": {
     "react": ">=16"
   },
+  "dependencies": {
+    "@windmill/utils": "^1.0.0"
+  },
   "files": [
     "cjs",
     "esm",
