--- a/packages/mock-repo/tsconfig.build.json
+++ b/packages/mock-repo/tsconfig.build.json
@@ -1,3 +1,9 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "paths": {
+      "@windmill/*": ["node_modules/@windmill/*/src"]
+    }
+  },
+  "include": ["src"]
 }
