Add a method to check if a simulation is accessible, and refactor mock-repo to include a component which can easily be inaccessible  (#2)

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint . --ext .js,.ts,.tsx -f codeframe",
     "pretest": "yarn typecheck && yarn lint",
     "test": "yarn test:unit",
-    "test:unit": "mocha \"packages/**/test/**/*.spec.ts?(x)\"",
-    "start": "yarn workspace @windmill/app start",
+    "test:unit": "mocha-pup \"packages/**/test/**/*.spec.ts?(x)\"",
     "typecheck": "tsc --noEmit",
     "prettify": "npx prettier \"packages/**/*.{js,ts,tsx}\" --write"
   },
@@ -34,6 +33,7 @@
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
+    "@wixc3/wcs-core": "^1.5.0",
     "chai": "^4.2.0",
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
@@ -45,6 +45,8 @@
     "lerna": "^3.20.2",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^7.1.1",
+    "mocha-pup": "^2.1.1",
+    "puppeteer": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
