--- a/packages/sanity/package.json
+++ b/packages/sanity/package.json
@@ -10,7 +10,7 @@
     "build": "yarn build:cjs && yarn build:esm",
     "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir cjs",
     "build:esm": "tsc -p tsconfig.build.json --module esnext --outDir esm",
-    "test": "mocha -r @ts-tools/node/r -r @stylable/node/register \"test/**/*.spec.ts?(x)\"",
+    "test": "mocha -r @ts-tools/node/r -r @stylable/node/register \"test/**/*.unit.ts?(x)\"",
     "prepack": "yarn build"
   },
   "peerDependencies": {
