--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/chai": "^4.2.11",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.3",
+    "@types/html-webpack-plugin": "^3.2.2",
     "@types/mocha": "^7.0.2",
     "@types/node": "12",
     "@types/react": "^16.9.27",
