--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.3",
     "@types/html-webpack-plugin": "^3.2.2",
+    "@types/koa": "^2.11.3",
+    "@types/koa-webpack": "^5.0.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "12",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
+    "@types/webpack": "^4.41.10",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "@wixc3/wcs-core": "^1.5.0",
