--- a/packages/a11y-cli/package.json
+++ b/packages/a11y-cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@windmill/utils",
+  "name": "@windmill/a11y-cli",
   "version": "1.0.0",
   "main": "cjs/index.js",
   "module": "esm/index.js",
@@ -10,11 +10,11 @@
     "build": "yarn build:cjs && yarn build:esm",
     "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir cjs",
     "build:esm": "tsc -p tsconfig.build.json --module esnext --outDir esm",
-    "test": "mocha \"test/**/*.spec.ts?(x)\"",
+    "test": "mocha-pup \"test/**/*.spec.ts?(x)\"",
     "prepack": "yarn build"
   },
   "peerDependencies": {
-    "webpack": ">=4"
+    "react": ">=16"
   },
   "files": [
     "cjs",
@@ -29,10 +29,6 @@
     "access": "public"
   },
   "dependencies": {
-    "chalk": "^4.0.0",
-    "html-webpack-plugin": "^4.0.4",
-    "koa": "^2.11.0",
-    "koa-webpack": "^5.3.0",
-    "puppeteer": "^2.1.1"
+    "axe-core": "^3.5.2"
   }
 }
