--- a/packages/a11y-cli/package.json
+++ b/packages/a11y-cli/package.json
@@ -29,6 +29,7 @@
     "access": "public"
   },
   "dependencies": {
-    "axe-core": "^3.5.2"
+    "axe-core": "^3.5.2",
+    "webpack-virtual-modules": "^0.2.1"
   }
 }
