--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "lerna run clean --stream --parallel",
     "build": "lerna run build --stream --parallel",
+    "build:watch": "lerna run --parallel build:watch",
     "lint": "eslint . --ext .js,.ts,.tsx -f codeframe",
     "pretest": "yarn typecheck && yarn lint",
     "test": "yarn test:browser yarn test:node",
@@ -51,6 +52,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^7.1.1",
     "mocha-pup": "^2.1.1",
+    "npm-run-all": "^4.1.5",
     "puppeteer": "^2.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
