--- a/packages/a11y-cli/package.json
+++ b/packages/a11y-cli/package.json
@@ -4,10 +4,16 @@
   "main": "cjs/index.js",
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
+  "bin": {
+    "windmill-a11y": "bin/cli.js"
+  },
   "scripts": {
     "clean": "rimraf ./cjs ./esm",
     "prebuild": "yarn clean",
     "build": "yarn build:cjs && yarn build:esm",
+    "build:watch": "run-p build:cjs-watch build:esm-watch",
+    "build:cjs-watch": "tsc -p tsconfig.build.json --watch --outDir cjs --module commonjs",
+    "build:esm-watch": "tsc -p tsconfig.build.json --watch --outDir esm --module esnext",
     "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir cjs",
     "build:esm": "tsc -p tsconfig.build.json --module esnext --outDir esm",
     "test": "mocha-pup \"test/**/*.spec.ts?(x)\"",
@@ -17,9 +23,11 @@
     "react": ">=16"
   },
   "files": [
+    "src",
+    "bin",
     "cjs",
     "esm",
-    "src"
+    "templates"
   ],
   "license": "MIT",
   "repository": "git@github.com:wixplosives/windmill.git",
@@ -30,6 +38,7 @@
   },
   "dependencies": {
     "axe-core": "^3.5.2",
+    "webpack": "^4.42.1",
     "webpack-virtual-modules": "^0.2.1"
   }
 }
