--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "12",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
+    "@types/temp": "^0.8.34",
     "@types/webpack": "^4.41.10",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
