--- a/packages/mock-repo/package.json
+++ b/packages/mock-repo/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "@windmill/utils": "^1.0.0",
     "@windmill/a11y": "^1.0.0",
-    "@windmill/sanity": "^1.0.0"
+    "@windmill/sanity": "^1.0.0",
+    "@windmill/ssr": "^1.0.0"
   },
   "files": [
     "cjs",
