--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/node": "12",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
+    "@types/sinon": "^9.0.0",
+    "@types/sinon-chai": "^3.2.4",
     "@types/temp": "^0.8.34",
     "@types/webpack": "^4.41.10",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
