--- a/packages/mock-repo/package.json
+++ b/packages/mock-repo/package.json
@@ -18,8 +18,7 @@
   },
   "dependencies": {
     "@windmill/utils": "^1.0.0",
-    "@windmill/a11y": "^1.0.0",
-    "@windmill/sanity": "^1.0.0"
+    "@windmill/a11y": "^1.0.0"
   },
   "files": [
     "cjs",
