Fixing stuff up

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -17,7 +17,8 @@
     "prepack": "yarn build"
   },
   "peerDependencies": {
-    "webpack": ">=4"
+    "webpack": ">=4",
+    "html-webpack-plugin": ">=4"
   },
   "files": [
     "cjs",
@@ -33,7 +34,6 @@
   },
   "dependencies": {
     "chalk": "^4.0.0",
-    "html-webpack-plugin": "^4.0.4",
     "koa": "^2.11.0",
     "koa-webpack": "^5.3.0",
     "puppeteer": "^2.1.1"
