--- a/package.json
+++ b/package.json
@@ -31,15 +31,18 @@
     "@types/express": "^4.17.3",
     "@types/html-webpack-plugin": "^3.2.2",
     "@types/koa": "^2.11.3",
+    "@types/koa-static": "^4.0.1",
     "@types/koa-webpack": "^5.0.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "12",
+    "@types/puppeteer": "^2.0.1",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
     "@types/sinon": "^9.0.0",
     "@types/sinon-chai": "^3.2.4",
     "@types/temp": "^0.8.34",
     "@types/webpack": "^4.41.10",
+    "@types/webpack-virtual-modules": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "@wixc3/wcs-core": "^1.5.0",
@@ -51,6 +54,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "html-webpack-plugin": "^4.0.3",
+    "koa-static": "^5.0.0",
     "lerna": "^3.20.2",
     "mini-css-extract-plugin": "^0.9.0",
     "mocha": "^7.1.1",
