--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/chai": "^4.2.11",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.6",
+    "@types/glob": "^7.1.1",
     "@types/html-webpack-plugin": "^3.2.2",
     "@types/koa": "^2.11.3",
     "@types/koa-static": "^4.0.1",
