--- a/packages/a11y/package.json
+++ b/packages/a11y/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "axe-core": "^3.5.3",
+    "glob": "^7.1.6",
     "webpack": "^4.43.0",
     "webpack-virtual-modules": "^0.2.2"
   }
