Add a11y cli command (#4)
* Stash

* Stash

* Adding puppeteer stuff

* Prevent cleaning again...

* Protect from git clean

* a11y is working, somewhat

* Add ability to run on external repositories

* Start adding hydration test

* Moving some stuff around

* Add watch mode

* Moving ssr test to its own package

* Add hydration tests

* Committing before I split stuff off

* Add a11y CLI command to Windmill

* Remove comments

* Fixing stuff up

* Upgrade deps

* Add test for a11y cli

* Add lock file

* linting

* Delete globals

* Add tests for a11y

* Fix tests

--- a/packages/mock-repo/package.json
+++ b/packages/mock-repo/package.json
@@ -17,7 +17,8 @@
     "react": ">=16"
   },
   "dependencies": {
-    "@windmill/utils": "^1.0.0"
+    "@windmill/utils": "^1.0.0",
+    "@windmill/a11y": "^1.0.0"
   },
   "files": [
     "cjs",
