--- a/packages/node-utils/package.json
+++ b/packages/node-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@windmill/sanity",
+  "name": "@windmill/node-utils",
   "version": "1.0.0",
   "main": "cjs/index.js",
   "module": "esm/index.js",
@@ -8,13 +8,16 @@
     "clean": "rimraf ./cjs ./esm",
     "prebuild": "yarn clean",
     "build": "yarn build:cjs && yarn build:esm",
+    "build:watch": "run-p build:cjs-watch build:esm-watch",
+    "build:cjs-watch": "tsc -p tsconfig.build.json --watch --outDir cjs --module commonjs",
+    "build:esm-watch": "tsc -p tsconfig.build.json --watch --outDir esm --module esnext",
     "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir cjs",
     "build:esm": "tsc -p tsconfig.build.json --module esnext --outDir esm",
-    "test": "mocha -r @ts-tools/node/r -r @stylable/node/register \"test/**/*.unit.ts?(x)\"",
+    "test": "mocha \"test/**/*.spec.ts?(x)\"",
     "prepack": "yarn build"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "webpack": ">=4"
   },
   "files": [
     "cjs",
@@ -27,5 +30,6 @@
   "private": true,
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "dependencies": {}
 }
