--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,8 @@
                 "@typescript-eslint/interface-name-prefix": "off",
                 "@typescript-eslint/no-floating-promises": "error",
                 "@typescript-eslint/no-use-before-define": "off",
-                "@typescript-eslint/no-unused-vars": "off"
+                "@typescript-eslint/no-unused-vars": "off",
+                "@typescript-eslint/no-unnecessary-type-assertion": "off"
             }
         }
     ]
