--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "clean": "lerna run clean --stream --parallel",
     "build": "lerna run build --stream --parallel",
+    "build:watch": "lerna run --parallel build:watch",
     "lint": "eslint . --ext .js,.ts,.tsx -f codeframe",
     "pretest": "yarn typecheck && yarn lint",
     "test": "yarn test:browser yarn test:node",
@@ -17,44 +18,57 @@
   "devDependencies": {
     "@file-services/path": "^2.2.0",
     "@file-services/types": "^2.2.0",
-    "@stylable/cli": "^3.4.2",
-    "@stylable/core": "^3.4.2",
-    "@stylable/dom-test-kit": "^3.4.2",
-    "@stylable/node": "^3.4.2",
-    "@stylable/runtime": "^3.4.2",
-    "@stylable/webpack-plugin": "^3.4.2",
+    "@stylable/cli": "^3.4.4",
+    "@stylable/core": "^3.4.4",
+    "@stylable/dom-test-kit": "^3.4.4",
+    "@stylable/node": "^3.4.4",
+    "@stylable/runtime": "^3.4.4",
+    "@stylable/webpack-plugin": "^3.4.4",
     "@ts-tools/node": "^1.1.3",
     "@ts-tools/webpack-loader": "^1.1.4",
     "@types/chai": "^4.2.11",
     "@types/compression": "^1.7.0",
     "@types/express": "^4.17.6",
+    "@types/glob": "^7.1.1",
+    "@types/html-webpack-plugin": "^3.2.2",
+    "@types/koa": "^2.11.3",
+    "@types/koa-static": "^4.0.1",
+    "@types/koa-webpack": "^5.0.1",
     "@types/mocha": "^7.0.2",
     "@types/node": "12",
+    "@types/puppeteer": "^2.0.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/sinon": "^9.0.0",
+    "@types/sinon-chai": "^3.2.4",
+    "@types/temp": "^0.8.34",
+    "@types/webpack": "^4.41.12",
+    "@types/webpack-virtual-modules": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "@wixc3/wcs-core": "^1.5.0",
     "chai": "^4.2.0",
-    "css-loader": "^3.5.2",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-no-only-tests": "^2.4.0",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "html-webpack-plugin": "^4.2.0",
+    "koa-static": "^5.0.0",
     "lerna": "^3.20.2",
     "mini-css-extract-plugin": "^0.9.0",
-    "mocha": "^7.1.1",
+    "mocha": "^7.1.2",
     "mocha-pup": "^3.0.0",
-    "puppeteer": "^3.0.0",
+    "npm-run-all": "^4.1.5",
+    "puppeteer": "^3.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "~3.8.3",
-    "webpack": "^4.42.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
