--- a/packages/a11y/package.json
+++ b/packages/a11y/package.json
@@ -4,22 +4,32 @@
   "main": "cjs/index.js",
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
+  "bin": {
+    "windmill-a11y": "bin/cli.js"
+  },
   "scripts": {
     "clean": "rimraf ./cjs ./esm",
     "prebuild": "yarn clean",
     "build": "yarn build:cjs && yarn build:esm",
+    "build:watch": "run-p build:cjs-watch build:esm-watch",
+    "build:cjs-watch": "tsc -p tsconfig.build.json --watch --outDir cjs --module commonjs",
+    "build:esm-watch": "tsc -p tsconfig.build.json --watch --outDir esm --module esnext",
     "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir cjs",
     "build:esm": "tsc -p tsconfig.build.json --module esnext --outDir esm",
-    "test": "mocha-pup \"test/**/*.spec.ts?(x)\"",
+    "test": "yarn test:node && yarn test:browser",
+    "test:node": "mocha -r @ts-tools/node/r -r @stylable/node/register \"test/**/*.unit.ts?(x)\"",
+    "test:browser": "mocha-pup \"test/**/*.spec.ts?(x)\"",
     "prepack": "yarn build"
   },
   "peerDependencies": {
     "react": ">=16"
   },
   "files": [
+    "src",
+    "bin",
     "cjs",
     "esm",
-    "src"
+    "templates"
   ],
   "license": "MIT",
   "repository": "git@github.com:wixplosives/windmill.git",
@@ -29,6 +39,9 @@
     "access": "public"
   },
   "dependencies": {
-    "axe-core": "^3.5.3"
+    "axe-core": "^3.5.3",
+    "glob": "^7.1.6",
+    "webpack": "^4.43.0",
+    "webpack-virtual-modules": "^0.2.2"
   }
 }
