--- a/packages/a11y/package.json
+++ b/packages/a11y/package.json
@@ -42,6 +42,7 @@
     "axe-core": "^3.5.3",
     "glob": "^7.1.6",
     "webpack": "^4.43.0",
-    "webpack-virtual-modules": "^0.2.2"
+    "webpack-virtual-modules": "^0.2.2",
+    "@windmill/utils": "^1.0.0"
   }
 }
