--- a/packages/a11y/package.json
+++ b/packages/a11y/package.json
@@ -34,7 +34,7 @@
   "license": "MIT",
   "repository": "git@github.com:wixplosives/windmill.git",
   "sideEffects": false,
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public"
   },
@@ -43,6 +43,7 @@
     "glob": "^7.1.6",
     "webpack": "^4.43.0",
     "webpack-virtual-modules": "^0.2.2",
-    "@windmill/utils": "^1.0.0"
+    "@windmill/utils": "^1.0.0",
+    "@windmill/node-utils": "^1.0.0"
   }
 }
