--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -28,7 +28,7 @@
   "license": "MIT",
   "repository": "git@github.com:wixplosives/windmill.git",
   "sideEffects": false,
-  "private": true,
+  "private": false,
   "publishConfig": {
     "access": "public"
   },
