--- a/packages/mock-repo/package.json
+++ b/packages/mock-repo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@windmill/mock-repo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "cjs/index.js",
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
@@ -17,8 +17,8 @@
     "react": ">=16"
   },
   "dependencies": {
-    "@windmill/utils": "^1.0.0",
-    "@windmill/a11y": "^1.0.0"
+    "@windmill/a11y": "^1.0.1",
+    "@windmill/utils": "^1.0.1"
   },
   "files": [
     "cjs",
