--- a/package.json
+++ b/package.json
@@ -73,5 +73,6 @@
     "webpack-dev-server": "^3.10.3"
   },
   "license": "MIT",
-  "private": true
+  "private": true,
+  "repository": "git@github.com:wixplosives/windmill.git"
 }
