--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -37,5 +37,6 @@
     "koa": "^2.11.0",
     "koa-webpack": "^5.3.0",
     "puppeteer": "^3.0.1"
-  }
+  },
+  "gitHead": "d82ad6a3d547fff67c1b434580ae511f6b7ef6e0"
 }
