--- a/packages/windmill-a11y/package.json
+++ b/packages/windmill-a11y/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "@windmill/utils",
+  "name": "@wixc3/windmill-/a11y",
   "version": "1.0.1",
   "main": "cjs/index.js",
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
+  "bin": {
+    "windmill-a11y": "bin/cli.js"
+  },
   "scripts": {
     "clean": "rimraf ./cjs ./esm",
     "prebuild": "yarn clean",
@@ -13,17 +16,20 @@
     "build:esm-watch": "tsc -p tsconfig.build.json --watch --outDir esm --module esnext",
     "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir cjs",
     "build:esm": "tsc -p tsconfig.build.json --module esnext --outDir esm",
-    "test": "mocha \"test/**/*.spec.ts?(x)\"",
+    "test": "yarn test:node && yarn test:browser",
+    "test:node": "mocha -r @ts-tools/node/r -r @stylable/node/register \"test/**/*.unit.ts?(x)\"",
+    "test:browser": "mocha-pup \"test/**/*.spec.ts?(x)\"",
     "prepack": "yarn build"
   },
   "peerDependencies": {
-    "html-webpack-plugin": ">=4",
-    "webpack": ">=4"
+    "react": ">=16"
   },
   "files": [
+    "src",
+    "bin",
     "cjs",
     "esm",
-    "src"
+    "templates"
   ],
   "license": "MIT",
   "repository": "git@github.com:wixplosives/windmill.git",
@@ -33,10 +39,12 @@
     "access": "public"
   },
   "dependencies": {
-    "chalk": "^4.0.0",
-    "koa": "^2.11.0",
-    "koa-webpack": "^5.3.0",
-    "puppeteer": "^3.0.1"
+    "@wixc3/windmill-/node-utils": "^1.0.1",
+    "@wixc3/windmill-/utils": "^1.0.1",
+    "axe-core": "^3.5.3",
+    "glob": "^7.1.6",
+    "webpack": "^4.43.0",
+    "webpack-virtual-modules": "^0.2.2"
   },
   "gitHead": "d82ad6a3d547fff67c1b434580ae511f6b7ef6e0"
 }
