--- a/packages/windmill-a11y/package.json
+++ b/packages/windmill-a11y/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wixc3/windmill-/a11y",
+  "name": "@wixc3/windmill-a11y",
   "version": "1.0.1",
   "main": "cjs/index.js",
   "module": "esm/index.js",
@@ -39,8 +39,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@wixc3/windmill-/node-utils": "^1.0.1",
-    "@wixc3/windmill-/utils": "^1.0.1",
+    "@wixc3/windmill-node-utils": "^1.0.1",
+    "@wixc3/windmill-utils": "^1.0.1",
     "axe-core": "^3.5.3",
     "glob": "^7.1.6",
     "webpack": "^4.43.0",
