--- a/packages/windmill-utils/package.json
+++ b/packages/windmill-utils/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "koa": "^2.11.0",
+    "koa-static": "^5.0.0",
     "koa-webpack": "^5.3.0",
     "puppeteer": "^3.0.1"
   },
