Needed to add patch-console to files package.json

--- a/packages/windmill-utils/package.json
+++ b/packages/windmill-utils/package.json
@@ -23,7 +23,8 @@
   "files": [
     "cjs",
     "esm",
-    "src"
+    "src",
+    "patch-console.js"
   ],
   "license": "MIT",
   "repository": "git@github.com:wixplosives/windmill.git",
