--- a/packages/windmill-utils/package.json
+++ b/packages/windmill-utils/package.json
@@ -34,6 +34,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@file-services/path": "^2.2.0",
     "chalk": "^4.0.0",
     "koa": "^2.11.0",
     "koa-static": "^5.0.0",
