--- a/packages/windmill-utils/package.json
+++ b/packages/windmill-utils/package.json
@@ -35,6 +35,8 @@
     "access": "public"
   },
   "dependencies": {
+    "@file-services/node": "^2.2.0",
+    "@file-services/overlay": "^2.2.0",
     "@file-services/path": "^2.2.0",
     "chalk": "^4.0.0",
     "koa": "^2.11.0",
