--- a/packages/windmill-a11y/package.json
+++ b/packages/windmill-a11y/package.json
@@ -43,8 +43,7 @@
     "@wixc3/windmill-utils": "^1.0.7",
     "axe-core": "^3.5.3",
     "glob": "^7.1.6",
-    "webpack": "^4.43.0",
-    "webpack-virtual-modules": "^0.2.2"
+    "webpack": "^4.43.0"
   },
   "gitHead": "d82ad6a3d547fff67c1b434580ae511f6b7ef6e0"
 }
