--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/koa-static": "^4.0.1",
     "@types/koa-webpack": "^5.0.1",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.3",
+    "@types/node": "12",
     "@types/puppeteer": "^3.0.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
@@ -51,7 +51,7 @@
     "@wixc3/wcs-core": "^1.5.0",
     "chai": "^4.2.0",
     "css-loader": "^3.5.3",
-    "eslint": "^7.0.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-no-only-tests": "^2.4.0",
     "eslint-plugin-react": "^7.20.0",
