--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,11 @@
     },
     "extends": ["eslint:recommended", "plugin:react/recommended", "prettier", "prettier/react"],
     "plugins": ["react-hooks", "no-only-tests"],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "rules": {
         "no-only-tests/no-only-tests": "error",
         "no-console": "error",
@@ -16,19 +21,16 @@
     "overrides": [
         {
             "files": ["*.ts", "*.tsx"],
-            "parser": "@typescript-eslint/parser",
             "parserOptions": {
-                "project": "./tsconfig.json"
+                "project": "./tsconfig.json",
+                "warnOnUnsupportedTypeScriptVersion": false
             },
             "extends": [
-                "plugin:@typescript-eslint/eslint-recommended",
                 "plugin:@typescript-eslint/recommended",
                 "plugin:@typescript-eslint/recommended-requiring-type-checking",
                 "prettier/@typescript-eslint"
             ],
             "rules": {
-                "@typescript-eslint/explicit-function-return-type": "off",
-                "@typescript-eslint/interface-name-prefix": "off",
                 "@typescript-eslint/no-floating-promises": "error",
                 "@typescript-eslint/no-use-before-define": "off",
                 "@typescript-eslint/no-unused-vars": "off",
