--- a/packages/windmill-a11y/package.json
+++ b/packages/windmill-a11y/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wixc3/windmill-a11y",
   "version": "1.0.7",
-  "main": "cjs/index.js",
+  "main": "src/index",
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
   "bin": {
