Remove virtual modules and use @file-services/webpack instead (#10)

--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "scripts": {
     "clean": "lerna run clean --stream --parallel",
     "build": "lerna run build --stream --parallel",
-    "build:watch": "lerna run --parallel build:watch",
     "lint": "eslint . -f codeframe",
     "pretest": "yarn typecheck && yarn lint",
-    "test": "yarn test:browser yarn test:node",
+    "test": "yarn test:browser && yarn test:node",
     "test:browser": "mocha-pup \"packages/**/test/**/*.spec.ts?(x)\"",
-    "test:node": "mocha -r @ts-tools/node/r -r @stylable/node/register \"test/**/*.unit.ts?(x)\"",
+    "test:node": "mocha -r @ts-tools/node/r -r @stylable/node/register \"packages/**/test/**/*.unit.ts?(x)\"",
     "typecheck": "tsc --noEmit",
     "prettify": "npx prettier \"packages/**/*.{js,ts,tsx}\" --write"
   },
   "devDependencies": {
+    "@file-services/memory": "^2.2.0",
+    "@file-services/node": "^2.2.0",
+    "@file-services/overlay": "^2.2.0",
     "@file-services/path": "^2.2.0",
     "@file-services/types": "^2.2.0",
+    "@file-services/webpack": "^2.2.0",
     "@stylable/cli": "^3.6.0",
     "@stylable/core": "^3.6.0",
     "@stylable/dom-test-kit": "^3.6.0",
@@ -42,7 +45,6 @@
     "@types/sinon-chai": "^3.2.4",
     "@types/temp": "^0.8.34",
     "@types/webpack": "^4.41.13",
-    "@types/webpack-virtual-modules": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
     "@wixc3/wcs-core": "^1.5.0",
