--- a/packages/windmill-node-utils/package.json
+++ b/packages/windmill-node-utils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wixc3/windmill-node-utils",
   "version": "1.0.2",
-  "main": "src/index",
+  "main": "cjs/index",
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
   "scripts": {
