--- a/packages/windmill-sanity/templates/index.template
+++ b/packages/windmill-sanity/templates/index.template
@@ -2,15 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>Sanity Tests</title>
   <link rel="icon" href="data:,">
-  <style>
-    body {
-      margin: 20px;
-    }
-  </style>
+  <script>components = <%= htmlWebpackPlugin.options.components %>;</script>
 </head>
 <body>
-  <div id="react-root"></div>
+  <div id="mocha"></div>
+  <div id="root"></div>
 </body>
 </html>
