Add warning for skipping hydration tests, and actually skip them..

--- a/packages/windmill-sanity/package.json
+++ b/packages/windmill-sanity/package.json
@@ -24,6 +24,7 @@
     "@file-services/memory": "^2.2.0",
     "@wixc3/windmill-node-utils": "^1.0.2",
     "@wixc3/windmill-utils": "^1.0.7",
+    "chalk": "^4.1.0",
     "glob": "^7.1.6",
     "webpack": "^4.43.0"
   },
