--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@stylable/node": "^3.7.0",
     "@stylable/runtime": "^3.7.0",
     "@stylable/webpack-plugin": "^3.7.0",
+    "@ts-tools/build": "^1.2.6",
     "@ts-tools/node": "^1.1.3",
     "@ts-tools/webpack-loader": "^1.1.4",
     "@types/chai": "^4.2.11",
