--- a/packages/windmill-mock-repo/package.json
+++ b/packages/windmill-mock-repo/package.json
@@ -2,10 +2,9 @@
   "name": "@wixc3/windmill-mock-repo",
   "version": "1.0.11",
   "main": "cjs/index",
-  "module": "esm/index.js",
-  "types": "esm/index.d.ts",
+  "types": "cjs/index.d.ts",
   "scripts": {
-    "clean": "rimraf ./cjs ./esm",
+    "clean": "rimraf ./cjs",
     "prebuild": "yarn clean",
     "build": "ts-build ./src --cjs",
     "test": "mocha-pup \"test/**/*.spec.ts?(x)\"",
@@ -21,7 +20,6 @@
   },
   "files": [
     "cjs",
-    "esm",
     "src"
   ],
   "license": "MIT",
