--- a/packages/windmill-utils/package.json
+++ b/packages/windmill-utils/package.json
@@ -2,10 +2,9 @@
   "name": "@wixc3/windmill-utils",
   "version": "1.0.9",
   "main": "cjs/index",
-  "module": "esm/index.js",
-  "types": "esm/index.d.ts",
+  "types": "cjs/index.d.ts",
   "scripts": {
-    "clean": "rimraf ./cjs ./esm",
+    "clean": "rimraf ./cjs",
     "prebuild": "yarn clean",
     "build": "ts-build ./src --cjs",
     "test": "mocha \"test/**/*.spec.ts?(x)\"",
@@ -18,7 +17,6 @@
   },
   "files": [
     "cjs",
-    "esm",
     "src",
     "patch-console.js",
     "static"
