--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/koa": "^2.11.4",
     "@types/koa-static": "^4.0.1",
     "@types/koa-webpack": "^5.0.1",
+    "@types/minimatch": "^3.0.3",
     "@types/mocha": "^8.0.3",
     "@types/node": "12",
     "@types/puppeteer": "^3.0.1",
@@ -60,6 +61,7 @@
     "koa-static": "^5.0.0",
     "lerna": "^3.22.1",
     "mini-css-extract-plugin": "^0.11.0",
+    "minimatch": "^3.0.4",
     "mocha": "^8.1.3",
     "mocha-pup": "^4.0.2",
     "npm-run-all": "^4.1.5",
