--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "@file-services/path": "^4.1.0",
     "@file-services/types": "^4.1.0",
     "@file-services/webpack": "^4.1.0",
-    "@stylable/cli": "^3.11.2",
-    "@stylable/core": "^3.11.2",
-    "@stylable/dom-test-kit": "^3.11.2",
-    "@stylable/node": "^3.11.2",
-    "@stylable/runtime": "^3.11.2",
-    "@stylable/webpack-plugin": "^3.11.2",
+    "@stylable/cli": "^3.11.5",
+    "@stylable/core": "^3.11.5",
+    "@stylable/dom-test-kit": "^3.11.5",
+    "@stylable/node": "^3.11.5",
+    "@stylable/runtime": "^3.11.5",
+    "@stylable/webpack-plugin": "^3.11.5",
     "@ts-tools/build": "^2.1.1",
     "@ts-tools/node": "^2.1.1",
     "@ts-tools/webpack-loader": "^2.1.1",
@@ -74,9 +74,7 @@
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "~4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.44.2"
   },
   "license": "MIT",
   "private": true,
