fix(packages): correct webpack peerDep range webpack@5 is not supported here *yet*.

--- a/packages/windmill-a11y/package.json
+++ b/packages/windmill-a11y/package.json
@@ -17,7 +17,7 @@
   },
   "peerDependencies": {
     "react": ">=16",
-    "webpack": ">=4"
+    "webpack": "^4.0.0"
   },
   "dependencies": {
     "@file-services/memory": "^5.3.0",
